// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexPattern getAsSavedObjectBody allowNoIndex perserves all fields 1`] = `
Object {
  "allowNoIndex": true,
  "fieldAttrs": "{\\"bytes\\":{\\"count\\":10},\\"ssl\\":{\\"count\\":20},\\"@timestamp\\":{\\"count\\":30},\\"time\\":{\\"count\\":30}}",
  "fieldFormatMap": undefined,
  "fields": "[{\\"count\\":10,\\"name\\":\\"bytes\\",\\"type\\":\\"number\\",\\"esTypes\\":[\\"long\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":true},{\\"count\\":20,\\"name\\":\\"ssl\\",\\"type\\":\\"boolean\\",\\"esTypes\\":[\\"boolean\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":true},{\\"count\\":30,\\"name\\":\\"@timestamp\\",\\"type\\":\\"date\\",\\"esTypes\\":[\\"date\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":true},{\\"count\\":30,\\"name\\":\\"time\\",\\"type\\":\\"date\\",\\"esTypes\\":[\\"date\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":true},{\\"count\\":0,\\"name\\":\\"@tags\\",\\"type\\":\\"string\\",\\"esTypes\\":[\\"keyword\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":true},{\\"count\\":0,\\"name\\":\\"utc_time\\",\\"type\\":\\"date\\",\\"esTypes\\":[\\"date\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":true},{\\"count\\":0,\\"name\\":\\"phpmemory\\",\\"type\\":\\"number\\",\\"esTypes\\":[\\"integer\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":true},{\\"count\\":0,\\"name\\":\\"ip\\",\\"type\\":\\"ip\\",\\"esTypes\\":[\\"ip\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":true},{\\"count\\":0,\\"name\\":\\"request_body\\",\\"type\\":\\"attachment\\",\\"esTypes\\":[\\"attachment\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":true},{\\"count\\":0,\\"name\\":\\"point\\",\\"type\\":\\"geo_point\\",\\"esTypes\\":[\\"geo_point\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":true},{\\"count\\":0,\\"name\\":\\"area\\",\\"type\\":\\"geo_shape\\",\\"esTypes\\":[\\"geo_shape\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":false},{\\"count\\":0,\\"name\\":\\"hashed\\",\\"type\\":\\"murmur3\\",\\"esTypes\\":[\\"murmur3\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":false,\\"readFromDocValues\\":false},{\\"count\\":0,\\"name\\":\\"geo.coordinates\\",\\"type\\":\\"geo_point\\",\\"esTypes\\":[\\"geo_point\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":true},{\\"count\\":0,\\"name\\":\\"extension\\",\\"type\\":\\"string\\",\\"esTypes\\":[\\"text\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":false},{\\"count\\":0,\\"name\\":\\"extension.keyword\\",\\"type\\":\\"string\\",\\"esTypes\\":[\\"keyword\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":true,\\"subType\\":{\\"multi\\":{\\"parent\\":\\"extension\\"}}},{\\"count\\":0,\\"name\\":\\"machine.os\\",\\"type\\":\\"string\\",\\"esTypes\\":[\\"text\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":false},{\\"count\\":0,\\"name\\":\\"machine.os.raw\\",\\"type\\":\\"string\\",\\"esTypes\\":[\\"keyword\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":true,\\"subType\\":{\\"multi\\":{\\"parent\\":\\"machine.os\\"}}},{\\"count\\":0,\\"name\\":\\"geo.src\\",\\"type\\":\\"string\\",\\"esTypes\\":[\\"keyword\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":true},{\\"count\\":0,\\"name\\":\\"_id\\",\\"type\\":\\"string\\",\\"esTypes\\":[\\"_id\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":false},{\\"count\\":0,\\"name\\":\\"_type\\",\\"type\\":\\"string\\",\\"esTypes\\":[\\"_type\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":false},{\\"count\\":0,\\"name\\":\\"_source\\",\\"type\\":\\"_source\\",\\"esTypes\\":[\\"_source\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":false},{\\"count\\":0,\\"name\\":\\"non-filterable\\",\\"type\\":\\"string\\",\\"esTypes\\":[\\"text\\"],\\"scripted\\":false,\\"searchable\\":false,\\"aggregatable\\":true,\\"readFromDocValues\\":false},{\\"count\\":0,\\"name\\":\\"non-sortable\\",\\"type\\":\\"string\\",\\"esTypes\\":[\\"text\\"],\\"scripted\\":false,\\"searchable\\":false,\\"aggregatable\\":false,\\"readFromDocValues\\":false},{\\"count\\":0,\\"name\\":\\"custom_user_field\\",\\"type\\":\\"conflict\\",\\"esTypes\\":[\\"conflict\\"],\\"scripted\\":false,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":true},{\\"count\\":0,\\"script\\":\\"'i am a string'\\",\\"lang\\":\\"expression\\",\\"name\\":\\"script string\\",\\"type\\":\\"string\\",\\"esTypes\\":[\\"text\\"],\\"scripted\\":true,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":false},{\\"count\\":0,\\"script\\":\\"1234\\",\\"lang\\":\\"expression\\",\\"name\\":\\"script number\\",\\"type\\":\\"number\\",\\"esTypes\\":[\\"long\\"],\\"scripted\\":true,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":false},{\\"count\\":0,\\"script\\":\\"1234\\",\\"lang\\":\\"painless\\",\\"name\\":\\"script date\\",\\"type\\":\\"date\\",\\"esTypes\\":[\\"date\\"],\\"scripted\\":true,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":false},{\\"count\\":0,\\"script\\":\\"1234\\",\\"lang\\":\\"expression\\",\\"name\\":\\"script murmur3\\",\\"type\\":\\"murmur3\\",\\"esTypes\\":[\\"murmur3\\"],\\"scripted\\":true,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":false},{\\"count\\":0,\\"name\\":\\"runtime_field\\",\\"type\\":\\"string\\",\\"esTypes\\":[\\"keyword\\"],\\"scripted\\":false,\\"searchable\\":false,\\"aggregatable\\":false,\\"readFromDocValues\\":false}]",
  "intervalName": undefined,
  "runtimeFieldMap": "{\\"runtime_field\\":{\\"type\\":\\"keyword\\",\\"script\\":{\\"source\\":\\"emit('hello world')\\"}}}",
  "sourceFilters": undefined,
  "timeFieldName": "timestamp",
  "title": "title",
  "type": "index-pattern",
  "typeMeta": undefined,
}
`;

exports[`IndexPattern getAsSavedObjectBody should match snapshot 1`] = `
Object {
  "allowNoIndex": undefined,
  "fieldAttrs": "{\\"bytes\\":{\\"count\\":10},\\"ssl\\":{\\"count\\":20},\\"@timestamp\\":{\\"count\\":30},\\"time\\":{\\"count\\":30}}",
  "fieldFormatMap": undefined,
  "fields": "[{\\"count\\":0,\\"script\\":\\"'i am a string'\\",\\"lang\\":\\"expression\\",\\"name\\":\\"script string\\",\\"type\\":\\"string\\",\\"esTypes\\":[\\"text\\"],\\"scripted\\":true,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":false},{\\"count\\":0,\\"script\\":\\"1234\\",\\"lang\\":\\"expression\\",\\"name\\":\\"script number\\",\\"type\\":\\"number\\",\\"esTypes\\":[\\"long\\"],\\"scripted\\":true,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":false},{\\"count\\":0,\\"script\\":\\"1234\\",\\"lang\\":\\"painless\\",\\"name\\":\\"script date\\",\\"type\\":\\"date\\",\\"esTypes\\":[\\"date\\"],\\"scripted\\":true,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":false},{\\"count\\":0,\\"script\\":\\"1234\\",\\"lang\\":\\"expression\\",\\"name\\":\\"script murmur3\\",\\"type\\":\\"murmur3\\",\\"esTypes\\":[\\"murmur3\\"],\\"scripted\\":true,\\"searchable\\":true,\\"aggregatable\\":true,\\"readFromDocValues\\":false}]",
  "intervalName": undefined,
  "runtimeFieldMap": "{\\"runtime_field\\":{\\"type\\":\\"keyword\\",\\"script\\":{\\"source\\":\\"emit('hello world')\\"}}}",
  "sourceFilters": undefined,
  "timeFieldName": "timestamp",
  "title": "title",
  "type": "index-pattern",
  "typeMeta": undefined,
}
`;

exports[`IndexPattern toSpec should match snapshot 1`] = `
Object {
  "allowNoIndex": false,
  "fieldAttrs": Object {},
  "fieldFormats": Object {},
  "fields": Object {
    "@tags": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "keyword",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "@tags",
      "readFromDocValues": true,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "string",
    },
    "@timestamp": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 30,
      "customLabel": undefined,
      "esTypes": Array [
        "date",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "@timestamp",
      "readFromDocValues": true,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "date",
    },
    "_id": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "_id",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "_id",
      "readFromDocValues": false,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "string",
    },
    "_source": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "_source",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "_source",
      "readFromDocValues": false,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "_source",
    },
    "_type": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "_type",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "_type",
      "readFromDocValues": false,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "string",
    },
    "area": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "geo_shape",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "area",
      "readFromDocValues": false,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "geo_shape",
    },
    "bytes": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 10,
      "customLabel": undefined,
      "esTypes": Array [
        "long",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "bytes",
      "readFromDocValues": true,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "number",
    },
    "custom_user_field": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "conflict",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "custom_user_field",
      "readFromDocValues": true,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "conflict",
    },
    "extension": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "text",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "extension",
      "readFromDocValues": false,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "string",
    },
    "extension.keyword": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "keyword",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "extension.keyword",
      "readFromDocValues": true,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": Object {
        "multi": Object {
          "parent": "extension",
        },
      },
      "type": "string",
    },
    "geo.coordinates": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "geo_point",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "geo.coordinates",
      "readFromDocValues": true,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "geo_point",
    },
    "geo.src": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "keyword",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "geo.src",
      "readFromDocValues": true,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "string",
    },
    "hashed": Object {
      "aggregatable": false,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "murmur3",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "hashed",
      "readFromDocValues": false,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "murmur3",
    },
    "ip": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "ip",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "ip",
      "readFromDocValues": true,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "ip",
    },
    "machine.os": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "text",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "machine.os",
      "readFromDocValues": false,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "string",
    },
    "machine.os.raw": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "keyword",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "machine.os.raw",
      "readFromDocValues": true,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": Object {
        "multi": Object {
          "parent": "machine.os",
        },
      },
      "type": "string",
    },
    "non-filterable": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "text",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "non-filterable",
      "readFromDocValues": false,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": false,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "string",
    },
    "non-sortable": Object {
      "aggregatable": false,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "text",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "non-sortable",
      "readFromDocValues": false,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": false,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "string",
    },
    "phpmemory": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "integer",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "phpmemory",
      "readFromDocValues": true,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "number",
    },
    "point": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "geo_point",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "point",
      "readFromDocValues": true,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "geo_point",
    },
    "request_body": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "attachment",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "request_body",
      "readFromDocValues": true,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "attachment",
    },
    "runtime_field": Object {
      "aggregatable": false,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "keyword",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": undefined,
      "lang": undefined,
      "name": "runtime_field",
      "readFromDocValues": false,
      "runtimeField": Object {
        "script": Object {
          "source": "emit('hello world')",
        },
        "type": "keyword",
      },
      "script": undefined,
      "scripted": false,
      "searchable": false,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "string",
    },
    "script date": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "date",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": false,
      "lang": "painless",
      "name": "script date",
      "readFromDocValues": false,
      "runtimeField": undefined,
      "script": "1234",
      "scripted": true,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "date",
    },
    "script murmur3": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "murmur3",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": false,
      "lang": "expression",
      "name": "script murmur3",
      "readFromDocValues": false,
      "runtimeField": undefined,
      "script": "1234",
      "scripted": true,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "murmur3",
    },
    "script number": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "long",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": false,
      "lang": "expression",
      "name": "script number",
      "readFromDocValues": false,
      "runtimeField": undefined,
      "script": "1234",
      "scripted": true,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "number",
    },
    "script string": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "text",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": false,
      "lang": "expression",
      "name": "script string",
      "readFromDocValues": false,
      "runtimeField": undefined,
      "script": "'i am a string'",
      "scripted": true,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "string",
    },
    "ssl": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 20,
      "customLabel": undefined,
      "esTypes": Array [
        "boolean",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "ssl",
      "readFromDocValues": true,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "boolean",
    },
    "time": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 30,
      "customLabel": undefined,
      "esTypes": Array [
        "date",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "time",
      "readFromDocValues": true,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "date",
    },
    "utc_time": Object {
      "aggregatable": true,
      "conflictDescriptions": undefined,
      "count": 0,
      "customLabel": undefined,
      "esTypes": Array [
        "date",
      ],
      "format": Object {
        "id": "number",
        "params": Object {
          "pattern": "$0,0.[00]",
        },
      },
      "isMapped": true,
      "lang": undefined,
      "name": "utc_time",
      "readFromDocValues": true,
      "runtimeField": undefined,
      "script": undefined,
      "scripted": false,
      "searchable": true,
      "shortDotsEnable": false,
      "subType": undefined,
      "type": "date",
    },
  },
  "id": "test-pattern",
  "intervalName": undefined,
  "runtimeFieldMap": Object {
    "runtime_field": Object {
      "script": Object {
        "source": "emit('hello world')",
      },
      "type": "keyword",
    },
  },
  "sourceFilters": undefined,
  "timeFieldName": "timestamp",
  "title": "title",
  "type": "index-pattern",
  "typeMeta": undefined,
  "version": "2",
}
`;
